# operations-puppet

./: .configs  .ctags  .gitignore  .gitmessage  .gitmodules  .gitreview  .ignored.yaml  .mailmap  .pep8  .puppet-lint.rc  .rspec  .rspec_parallel  .rubocop.yml  .rubocop_todo.yml  0001-Handle-HTTPS-for-Zero-traffic.patch  0001-openstack-horizon-to-module-profile-role.patch  0001-openstack-keystone-as-module-profile-role-for-deploy.patch  0001-openstack-pdns-auth-module-role-profile.patch  CONTRIBUTORS  Gemfile  Gemfile-doc  IamATypo  IamNotATypo  JENKINS  JENKINS_TEST  LICENSE  NOTICE  Puppetfile  Puppetfile.core  Puppetfile.vendor  README  README.md  Rakefile  Rakefile.ci  Rakefile.new  build_newdoc.sh  dump_secureredir_config.rb  environment.conf  expanderb.rb  find_tabs.sh  (+24 more)
doc/: README
modules/pontoon/files/: .gitignore  bootstrap.sh  certbot-deploy.sh  config.py  enc.py  enroll  enroll.py  git-post-receive  provision.sh  public-certs-httpd.conf  puppetdb.yaml  pyproject.toml  specmap.yaml  sso.yaml
modules/pontoon/files/appservers/: rolemap.yaml
modules/pontoon/files/bootstrap/: bootstrap.sh  git-post-receive.sh  git-pre-receive.sh  hiera-config.yaml  hiera-vars.yaml  pontoon-setup-repo.sh  probe-puppetdb.sh  provision.sh  rolemap.yaml
modules/pontoon/files/mariadb104-test/: rolemap.yaml
modules/pontoon/files/o11y-phi/: rolemap.yaml
modules/pontoon/files/observability/: rolemap.yaml
modules/pontoon/files/pontoon/: __init__.py  base.py  base_test.py  cloudvps.py  ctl.py  enc.py  enroll.py
modules/pontoon/files/public-certs/: certbot-deploy.sh  httpd.conf
(+25794 files in other folders)
